# DoViBakerVS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
DoViBakerVS/: DoViBakerVS.cpp  DoViBakerVS.h  DoViCubesVS.cpp  DoViCubesVS.h  DoViStatsFileLoaderVS.cpp  DoViStatsFileLoaderVS.h  DoViTonemapVS.cpp  DoViTonemapVS.h  VapourSynthEntry.cpp
include/: DoViProcessor.h  avisynth.h
src/: DoViProcessor.cpp
